refactor: 검증, 조회 등 엔티티 메서드로 캡슐화
- getter를 사용하지 않고 메서드를 통해 검증